# website-src

./: .gitignore  README.md  pelicanconf.py  pyproject.toml  run.py
content/: CNAME  _analytics.html  _base.html  _config.toml  _footer.html  _header.html  _hot_reloader.js  _markdown_page.html  _page.html  _profile.html  _profile_config.toml  _site_config.toml  _template_data.toml  index.html  main.css
content/_includes/: career-profile.html  profile.html
content/about-me/: index.html
content/articles/: blah.md  curated.md  keyboard-review.md  my-tastes.md
content/css/: main.css  orig-main.css
content/cv/: index.html
content/includes/: _education.html  _experience.html  _interests.html  _projects.html
content/js/: _hot_reloader.js
content/pages/: _about-me.md  _maintaining-my-website.md  _maintaining_my_website.md  _my-tastes.md  _my-website.md  _publications.md  _quick_puzzles.md  about-me.html  about-me.md  cv.html  maintaining-my-website.html  my-tastes.html  my-website.html  publications.html  publications.md  quick-puzzles.html
content/pages/cv/: _config.toml  _experience.html
content/profile/: index.html
content/root/: _career-profile.html  _index.html  _profile.html
output/: index.html
output/about-me/: index.html  my-tastes.html
output/cv/: index.html
output/js/: hot_reloader.js  render_maths.js
output/pages/: about-me.html  about-me.md  cv.html  maintaining-my-website.html  my-tastes.html  my-tastes.md  my-website.html  publications.html  quick-puzzles.html
output/profile/: index.html  index.tidy.html
(+5 files in other folders)
