[project]
name = "website-src"
version = "0.1.0"
description = "My homepage at www.corbettclark.com"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.11.18",
    "jinja2>=3.1.6",
    "markdown-it-py[linkify]>=3.0.0",
    "mdit-py-plugins>=0.4.2",
    "toml>=0.10.2",
    "user-agents>=2.2.0",
    "utidylib>=0.10",
    "watchfiles>=1.0.5",
]
